Fix zendesk including issue

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -61,8 +61,9 @@
   };
 </script>-->
 <script src="https://www.youtube.com/iframe_api"></script>
+<script zendesk-include></script>
+
 <!-- build:js scripts/vendor.js -->
-<script zendesc-include></script>
 
 <!--<script type="text/javascript" src="bower_components/PACE/pace.js"></script>-->
 
