Change account vendor directly from list row click -> modal

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -316,6 +316,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/companies/companies.module.js"></script>
 <script type="text/javascript" src="js/portal/companies/companies.routes.js"></script>
 <script type="text/javascript" src="js/portal/companies/controller/companies.controller.js"></script>
+<script type="text/javascript" src="js/portal/companies/controller/changeAccountVendorModalController.js"></script>
 
 <script type="text/javascript" src="js/portal/cache/cache.module.js"></script>
 <script type="text/javascript" src="js/portal/cache/cache.routes.js"></script>
