--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -415,6 +415,7 @@ ga('create',  window.gaAccount, 'auto');
 <!-- Apps Analytic -->
 <script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/widgetsAppsAnalytics.module.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/widgetsAppsAnalyticsEditConfig.controller.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-bw-chart/widgetMobileBWChart.config.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-rps-chart/widgetMobileRPSChart.config.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-tops/widgetMobileTops.config.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-tops/widgetsAppsTopReportsDomains.controller.js"></script>
