--- a/code/dev/parts/logshippers/edit.html
+++ b/code/dev/parts/logshippers/edit.html
@@ -92,9 +92,9 @@
                 </ui-select-choices>
               </ui-select>
               <ui-select ng-model="selectedAppSourceId" class="source-select" theme="select2" ng-animate-disabled name="sourceId" ng-disabled="_loading" on-select="onAppSelect($model)" style="min-width: 550px;" ng-if="(model.source_type=='app')" required>
-                <ui-select-match placeholder="Select Application">{{$select.selected.app_name}}</ui-select-match>
+                <ui-select-match placeholder="Select Application">{{$select.selected.app_name}} <i>({{$select.selected.app_platform.replace('_',' ')}})</i></ui-select-match>
                 <ui-select-choices repeat="item.id as item in appsList | filter: {app_name: $select.search,account_id:model.account_id }">
-                  <div ng-bind-html="item.app_name|highlight: $select.search"></div>
+                  <div ng-bind-html="item.app_name + '<i> ('+item.app_platform.replace('_',' ')+')</i>'|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
               <label for="domain" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Select source name">
