Fix youtube player console log error

--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -42,7 +42,7 @@
     <h3 class="modal-title">SDK Introduction Video</h3>
   </div>
   <div class="modal-body">
-    <youtube-video style="width: 100%; min-height: 20vh;" video-id="model.youtubeId"></youtube-video>
+    <ng-youtube-embed video="model.youtubeId" autoplay="true" color="white" width="100%" style="width: 100%; min-height: 20vh;" disablekb="true"></ng-youtube-embed>
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning" type="button" ng-click="cancel()">Close</button>
@@ -72,15 +72,15 @@
                 <div class="form-group hidden-xs  " ng-if="$state.current.data.platform_code == 'iOS'">
                   <div class="col-xs-12"></div>
                 </div>
-                <div class="form-group" ng-if="$state.current.data.platform_code == 'iOS'">
-                  <a download="RevSDK.framework.zip" href="{{vendorConfig.sdk.download_links[$state.current.data.platform_code]}}" class="btn btn-download btn-success btn-vendor-download" ng-disabled="_loading" uib-tooltip="Click to download the latest version of mobile SDK">
+                <div class="form-group" ng-if="$state.current.data.platform_code == 'iOS' && vendorConfig.sdk.download_links[$state.current.data.platform_code]">
+                  <a download="RevSDK.framework.zip" ng-href="{{vendorConfig.sdk.download_links[$state.current.data.platform_code]}}" class="btn btn-download btn-success btn-vendor-download" ng-disabled="_loading" uib-tooltip="Click to download the latest version of mobile SDK">
                     <i class="glyphicon glyphicon-cloud-download"></i>&nbsp; Download SDK
                   </a>
                 </div>
                 <div class="form-group hidden-xs  " ng-if="$state.current.data.platform_code == 'iOS'">
                   <div class="col-xs-12"></div>
                 </div>
-                <div class="form-group" ng-if="$state.current.data.platform_code == 'iOS'">
+                <div class="form-group" ng-if="$state.current.data.platform_code == 'iOS' && !!vendorConfig.sdk.introduction_video_youtube_ids[$state.current.data.platform_code]">
                   <a __href="{{introductionVideoLinks[$state.current.data.platform_code]}}" class="btn btn-download btn-success btn-vendor-introduction" ng-disabled="_loading" uib-tooltip="Click to view SDK Introduction Video" __target="_blank" ng-click="onShowVideo($event, {youtubeId:vendorConfig.sdk.introduction_video_youtube_ids[$state.current.data.platform_code]})">
                     <i class="fa fa-youtube"></i>&nbsp; Introduction Video
                   </a>
