--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -127,6 +127,9 @@
                 <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Company">
                   <i class="glyphicon glyphicon-pencil"></i>
                 </a>
+                 <a ng-click="onGoToAccountInformation(item)" uisref=".information({id: item.id})" ng-if="!item.loading" uib-tooltip="View Account Resources">
+                  <i class="glyphicon glyphicon-equalizer"></i>
+                </a>
                 <a href="" ng-if="!item.loading" ng-class="{'disabled':isReadOnly()}" ng-click="deleteCompany(item)" uib-tooltip="Delete Company">
                   <i class="glyphicon glyphicon-trash"></i>
                 </a>
