Polishing the new 'All Account Resources' page

--- a/code/dev/parts/companies/account-resources.html
+++ b/code/dev/parts/companies/account-resources.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        Account Resources
+        All Account Resources
       </h2>
     </div>
   </div>
@@ -40,14 +40,14 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="pull-left">
-                  <h2>Account Users</h2>
+                  <h2>Users</h2>
                 </div>
               </div>
             </div>
           </div>
           <div class="panel-body">
             <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-              Currently account don't have any users registered in the system
+              Currently the account doesn't have any users registered in the system
             </div>
             <div class="alert alert-warning" ng-if="records == null && !_loading">
               Failed to retrieve a list of resources - please try again later
@@ -141,14 +141,14 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="pull-left">
-                  <h2>Account Domains</h2>
+                  <h2>Domains</h2>
                 </div>
               </div>
             </div>
           </div>
           <div class="panel-body">
             <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-              Currently account don't have any web domains registered in the system
+              Currently the account doesn't have any web domains registered in the system
             </div>
             <div class="alert alert-warning" ng-if="records == null && !_loading">
               Failed to retrieve a list of resources - please try again later
@@ -242,14 +242,14 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="pull-left">
-                  <h2>Account API Keys</h2>
+                  <h2>API Keys</h2>
                 </div>
               </div>
             </div>
           </div>
           <div class="panel-body">
             <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-              Currently account don't have any API keys registered in the system
+              Currently the account doesn't have any API keys registered in the system
             </div>
             <div class="alert alert-warning" ng-if="records == null && !_loading">
               Failed to retrieve a list of resources - please try again later
@@ -328,14 +328,14 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="pull-left">
-                  <h2>Account Log Shipping Jobs</h2>
+                  <h2>Log Shipping Jobs</h2>
                 </div>
               </div>
             </div>
           </div>
           <div class="panel-body">
             <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-              Currently account don't have any log shipping jobs configured in the system
+              Currently the account doesn't have any log shipping jobs configured in the system
             </div>
             <div class="alert alert-warning" ng-if="records == null && !_loading">
               Failed to retrieve a list of resources - please try again later
@@ -443,14 +443,14 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="pull-left">
-                  <h2>Account SSL Certificates</h2>
+                  <h2>SSL Certificates</h2>
                 </div>
               </div>
             </div>
           </div>
           <div class="panel-body">
             <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-              Currently account don't have any SSL certificates registered in the system
+              Currently the account doesn't have any SSL certificates registered in the system
             </div>
             <div class="alert alert-warning" ng-if="records == null && !_loading">
               Failed to retrieve a list of resources - please try again later
@@ -528,14 +528,14 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="pull-left">
-                  <h2>Account SSL Names</h2>
+                  <h2>SSL Names</h2>
                 </div>
               </div>
             </div>
           </div>
           <div class="panel-body">
             <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-              Currently account don't have any SSL names registered in the system
+              Currently the account doesn't have any SSL names registered in the system
             </div>
             <div class="alert alert-warning" ng-if="records == null && !_loading">
               Failed to retrieve a list of resources - please try again later
@@ -609,14 +609,14 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="pull-left">
-                  <h2>Account DNS Zones</h2>
+                  <h2>DNS Zones</h2>
                 </div>
               </div>
             </div>
           </div>
           <div class="panel-body">
             <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-              Currently account don't have any DNS zones registered in the system
+              Currently the account doesn't have any DNS zones registered in the system
             </div>
             <div class="alert alert-warning" ng-if="records == null && !_loading">
               Failed to retrieve a list of resources - please try again later
@@ -695,14 +695,14 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="pull-left">
-                  <h2>Account Applications</h2>
+                  <h2>Mobile Apps</h2>
                 </div>
               </div>
             </div>
           </div>
           <div class="panel-body">
             <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-              Currently account don't have any apps registered in the system
+              Currently the account doesn't have any apps registered in the system
             </div>
             <div class="alert alert-warning" ng-if="records == null && !_loading">
               Failed to retrieve a list of resources - please try again later
