--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -114,25 +114,27 @@
               <td>{{(item.subscription_name) ? item.subscription_name : 'Manual'}}</td>
               <td>{{getRelativeDate(item.updated_at)}}</td>
               <td class="actions text-right">
-                <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                <a ng-click="onGoToUsageReport(item)"  uisref="index.billing.usage({acc_id: item.id})" ng-if="!item.loading" uib-tooltip="Usage Report">
-                  <i class="fa fa-balance-scale"></i>
-                </a>
-                <a ng-click="onGoToBillingPlans(item)"  ng-if="!item.loading" uib-tooltip="Change Billing Plan">
-                  <i class="fa fa-arrow-circle-up"></i>
-                </a>
-                <a ng-click="onGoToBillingStatement(item)" ng-if="!item.loading" uib-tooltip="Statements">
-                  <i class="fa fa-money"></i>
-                </a>
-                <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Company">
-                  <i class="glyphicon glyphicon-pencil"></i>
-                </a>
-                <a href="" ng-if="!item.loading" ng-class="{'disabled':isReadOnly()}" ng-click="deleteCompany(item)" uib-tooltip="Delete Company">
-                  <i class="glyphicon glyphicon-trash"></i>
-                </a>
-                <a ng-click="onGoToAccountInformation(item)" uisref=".information({id: item.id})" ng-if="!item.loading" uib-tooltip="View Account Resources">
-                  <i class="glyphicon glyphicon-equalizer"></i>
-                </a>
+                <div class="actions--wrap">
+                  <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
+                  <a ng-click="onGoToUsageReport(item)"  uisref="index.billing.usage({acc_id: item.id})" ng-if="!item.loading" uib-tooltip="Usage Report">
+                    <i class="fa fa-balance-scale"></i>
+                  </a>
+                  <a ng-click="onGoToBillingPlans(item)"  ng-if="!item.loading" uib-tooltip="Change Billing Plan">
+                    <i class="fa fa-arrow-circle-up"></i>
+                  </a>
+                  <a ng-click="onGoToBillingStatement(item)" ng-if="!item.loading" uib-tooltip="Statements">
+                    <i class="fa fa-money"></i>
+                  </a>
+                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Company">
+                    <i class="glyphicon glyphicon-pencil"></i>
+                  </a>
+                  <a href="" ng-if="!item.loading" ng-class="{'disabled':isReadOnly()}" ng-click="deleteCompany(item)" uib-tooltip="Delete Company">
+                    <i class="glyphicon glyphicon-trash"></i>
+                  </a>
+                  <a href="" ng-click="onGoToAccountInformation($event, item)" ng-if="!item.loading" tooltip-placement="left" tooltip-append-to-body="{{true}}" uib-tooltip="View Account Resources">
+                    <i class="glyphicon glyphicon-equalizer"></i>
+                  </a>
+                </div>
               </td>
               <td ng-if="auth.isRevadmin()">
                 <a ng-click="onVendorUpdate(item)">
