Make copyright text configurable for each vendor

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -248,7 +248,7 @@
           </div>
           <div class="col-md-12 footer-content">
             <a href="{{contactUsLink}}" target="_blank">Contact Us</a>
-            <span class="pull-left copyright">Copyright {{vendorConfig.companyNameFull}} 2015-2017
+            <span class="pull-left copyright">{{vendorConfig.copyright}}
             <br>Version {{portalVersion}}/{{apiVersion}}
             </span>
             <!-- <span class="pull-right version">Version {{portalVersion}}/{{apiVersion}} </span> -->
