--- a/code/dev/parts/logshippers/list.html
+++ b/code/dev/parts/logshippers/list.html
@@ -88,89 +88,91 @@
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
           </div>
           <crud-pagination ng-if="records !== null"></crud-pagination>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>
-                  <a href="" ng-click="order('job_name')">Job Name</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'job_name'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th><a href="" ng-click="order('source_type')">Source</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'source_type'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th><a href="" ng-click="order('sourceName')">Source Name</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'sourceName'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th> <a href="" ng-click="order('destination_type')">Destination</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'destination_type'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th> <a href="" ng-click="order('destination_host')">Host</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'destination_host'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th>
-                  <a href="" ng-click="order('updated_at')">Last Update</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th class="state">
-                  <a href="" ng-click="order('operationalModeName')">Current State</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'operationalModeName'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th>Actions</th>
-                <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                  <a href="" ng-click="order('companyName')">Account</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'companyName'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)" ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
-                <td>
-                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Job">
-                  {{item.job_name}}
-                </a>
-                </td>
-                <td>{{sourceTypes[item.source_type]}}
-                </td>
-                <td>
-                  <div class="source-name">{{item.sourceName}}</div>
-                  <!-- NOTE: it`s mapping data-->
-                </td>
-                <td>{{destinationTypes[item.destination_type]}}
-                </td>
-                <td>{{item.destination_host}}</td>
-                <td>{{getRelativeDate(item.updated_at) }}</td>
-                <td class="state">
-                  <!-- {{item.operationalModeName}} -->
-                  <div logshippers-staging-status current-state="item.operationalModeName" ng-id="item.id"></div>
-                  <!--NOTE: it`s{{item.operational_mode}}-->
-                </td>
-                <td class="actions">
-                  <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Job">
-                    <i class="glyphicon glyphicon-pencil"></i>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>
+                    <a href="" ng-click="order('job_name')">Job Name</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'job_name'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th><a href="" ng-click="order('source_type')">Source</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'source_type'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th><a href="" ng-click="order('sourceName')">Source Name</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'sourceName'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th> <a href="" ng-click="order('destination_type')">Destination</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'destination_type'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th> <a href="" ng-click="order('destination_host')">Host</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'destination_host'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th>
+                    <a href="" ng-click="order('updated_at')">Last Update</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th class="state">
+                    <a href="" ng-click="order('operationalModeName')">Current State</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'operationalModeName'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th>Actions</th>
+                  <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
+                    <a href="" ng-click="order('companyName')">Account</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'companyName'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)" ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
+                  <td>
+                    <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Job">
+                    {{item.job_name}}
                   </a>
-                  <a href="" ng-if="!item.loading"  ng-class="{'disabled':isReadOnly()}"  ng-click="deleteJob(item)" uib-tooltip="Delete Job">
-                    <i class="glyphicon glyphicon-trash"></i>
-                  </a>
-                  <!-- “Pause With Log Piling” -->
-                  <a href="" ng-class="{'not-active':item.operational_mode=='pause','disabled':isReadOnly()}" ng-if="!item.loading" ng-click="onChangeLogShippingState(item,'pause')" uib-tooltip="Pause With Log Piling">
-                    <i class="glyphicon glyphicon-pause"></i>
-                  </a>
-                  <!--   “Start”  -->
-                  <a href="" ng-class="{'not-active':item.operational_mode=='active','disabled':isReadOnly()}" ng-if="!item.loading" ng-click="onChangeLogShippingState(item,'active')" uib-tooltip="Start">
-                    <i class="glyphicon glyphicon-play"></i>
-                  </a>
-                  <!-- “Stop” / “Start”  -->
-                  <a href="" ng-class="{'not-active':item.operational_mode=='stop','disabled':isReadOnly()}" ng-if="!item.loading" ng-click="onChangeLogShippingState(item,'stop')" uib-tooltip="Stop">
-                    <i class="glyphicon glyphicon-stop"></i>
-                  </a>
-                </td>
-                <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                  <div>{{item.companyName}}</div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+                  </td>
+                  <td>{{sourceTypes[item.source_type]}}
+                  </td>
+                  <td>
+                    <div class="source-name">{{item.sourceName}}</div>
+                    <!-- NOTE: it`s mapping data-->
+                  </td>
+                  <td>{{destinationTypes[item.destination_type]}}
+                  </td>
+                  <td>{{item.destination_host}}</td>
+                  <td>{{getRelativeDate(item.updated_at) }}</td>
+                  <td class="state">
+                    <!-- {{item.operationalModeName}} -->
+                    <div logshippers-staging-status current-state="item.operationalModeName" ng-id="item.id"></div>
+                    <!--NOTE: it`s{{item.operational_mode}}-->
+                  </td>
+                  <td class="actions">
+                    <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
+                    <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Job">
+                      <i class="glyphicon glyphicon-pencil"></i>
+                    </a>
+                    <a href="" ng-if="!item.loading"  ng-class="{'disabled':isReadOnly()}"  ng-click="deleteJob(item)" uib-tooltip="Delete Job">
+                      <i class="glyphicon glyphicon-trash"></i>
+                    </a>
+                    <!-- “Pause With Log Piling” -->
+                    <a href="" ng-class="{'not-active':item.operational_mode=='pause','disabled':isReadOnly()}" ng-if="!item.loading" ng-click="onChangeLogShippingState(item,'pause')" uib-tooltip="Pause With Log Piling">
+                      <i class="glyphicon glyphicon-pause"></i>
+                    </a>
+                    <!--   “Start”  -->
+                    <a href="" ng-class="{'not-active':item.operational_mode=='active','disabled':isReadOnly()}" ng-if="!item.loading" ng-click="onChangeLogShippingState(item,'active')" uib-tooltip="Start">
+                      <i class="glyphicon glyphicon-play"></i>
+                    </a>
+                    <!-- “Stop” / “Start”  -->
+                    <a href="" ng-class="{'not-active':item.operational_mode=='stop','disabled':isReadOnly()}" ng-if="!item.loading" ng-click="onChangeLogShippingState(item,'stop')" uib-tooltip="Stop">
+                      <i class="glyphicon glyphicon-stop"></i>
+                    </a>
+                  </td>
+                  <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
+                    <div>{{item.companyName}}</div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
           <hr>
           <crud-pagination></crud-pagination>
         </div>
