--- a/code/dev/parts/users/list.html
+++ b/code/dev/parts/users/list.html
@@ -53,78 +53,80 @@
             Loading...
           </div>
           <crud-pagination></crud-pagination>
-          <table class="table users-list">
-            <thead>
-            <tr>
-              <th>
-                <a href="" ng-click="order('firstname')">First Name</a>
-                <span class="sortorder" ng-show="filter.predicate === 'firstname'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('lastname')">Last Name</a>
-                <span class="sortorder" ng-show="filter.predicate === 'lastname'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('email')">Email</a>
-                <span class="sortorder" ng-show="filter.predicate === 'email'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('role')">Role</a>
-                <span class="sortorder" ng-show="filter.predicate === 'role'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('two_factor_auth_enabled')">2FA</a>
-                <span class="sortorder" ng-show="filter.predicate === 'two_factor_auth_enabled'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('updated_at')">Last Update</a>
-                <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>
-                <a href="" ng-click="order('last_login_at')">Last Login</a>
-                <span class="sortorder" ng-show="filter.predicate === 'last_login_at'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-              <th>Actions</th>
-              <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                <a href="" ng-click="order('companyName')">Account</a>
-                <span class="sortorder" ng-show="filter.predicate === 'companyName'" ng-class="{reverse: filter.reverse}"></span>
-              </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="user in filteredRecords | limitTo:filter.limit:filter.skip track by $index" id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)">
-              <td>
-                <a ui-sref=".edit({id: user.user_id})" ng-if="!item.loading" uib-tooltip="Edit User Profile">
-                  {{user.firstname}}
-                </a>
-              </td>
-              <td>
-                <a ui-sref=".edit({id: user.user_id})" ng-if="!item.loading" uib-tooltip="Edit User Profile">
-                  {{user.lastname}}
-                </a>
-              </td>
-              <td>{{user.email}}</td>
-              <td>{{user.role}}</td>
-              <td>
-                <span class="status-2fa-enabled" ng-if="user.two_factor_auth_enabled==true">Enabled</span>
-                <span class="status-2fa-disabled " ng-if="!user.two_factor_auth_enabled==true">Disabled</span>
-              </td>
-              <td>{{ getRelativeDate(user.updated_at) }}</td>
-              <td>{{ user.last_login_at ? getRelativeDate(user.last_login_at) : 'Never' }}</td>
-              <td class="actions">
-                <a ui-sref=".edit({id: user.user_id})" uib-tooltip="Edit User Profile">
-                  <i class="glyphicon glyphicon-pencil"></i>
-                </a>
-                <a href="" ng-click="deleteUser(user)" ng-class="{'disabled':isReadOnly()}"  uib-tooltip="Delete User">
-                  <i class="glyphicon glyphicon-trash"></i>
-                </a>
-              </td>
-              <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                  <div class="company-names">{{user.companyName}}</div>
-              </td>
-            </tr>
-            </tbody>
-          </table>
+          <div class="table-responsive">
+            <table class="table users-list">
+              <thead>
+              <tr>
+                <th>
+                  <a href="" ng-click="order('firstname')">First Name</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'firstname'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('lastname')">Last Name</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'lastname'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('email')">Email</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'email'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('role')">Role</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'role'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('two_factor_auth_enabled')">2FA</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'two_factor_auth_enabled'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('updated_at')">Last Update</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>
+                  <a href="" ng-click="order('last_login_at')">Last Login</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'last_login_at'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+                <th>Actions</th>
+                <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
+                  <a href="" ng-click="order('companyName')">Account</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'companyName'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr ng-repeat="user in filteredRecords | limitTo:filter.limit:filter.skip track by $index" id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)">
+                <td>
+                  <a ui-sref=".edit({id: user.user_id})" ng-if="!item.loading" uib-tooltip="Edit User Profile">
+                    {{user.firstname}}
+                  </a>
+                </td>
+                <td>
+                  <a ui-sref=".edit({id: user.user_id})" ng-if="!item.loading" uib-tooltip="Edit User Profile">
+                    {{user.lastname}}
+                  </a>
+                </td>
+                <td>{{user.email}}</td>
+                <td>{{user.role}}</td>
+                <td>
+                  <span class="status-2fa-enabled" ng-if="user.two_factor_auth_enabled==true">Enabled</span>
+                  <span class="status-2fa-disabled " ng-if="!user.two_factor_auth_enabled==true">Disabled</span>
+                </td>
+                <td>{{ getRelativeDate(user.updated_at) }}</td>
+                <td>{{ user.last_login_at ? getRelativeDate(user.last_login_at) : 'Never' }}</td>
+                <td class="actions">
+                  <a ui-sref=".edit({id: user.user_id})" uib-tooltip="Edit User Profile">
+                    <i class="glyphicon glyphicon-pencil"></i>
+                  </a>
+                  <a href="" ng-click="deleteUser(user)" ng-class="{'disabled':isReadOnly()}"  uib-tooltip="Delete User">
+                    <i class="glyphicon glyphicon-trash"></i>
+                  </a>
+                </td>
+                <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
+                    <div class="company-names">{{user.companyName}}</div>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
           <hr>
           <crud-pagination></crud-pagination>
         </div>
