--- a/code/dev/parts/auth/login.html
+++ b/code/dev/parts/auth/login.html
@@ -3,8 +3,8 @@
 
     <div class="login_box">
       <div id="logo" class="logo block-center">
-        <a href="{{vendorConfig.companyWebsiteURL}}" target="_blank">
-          <img src="images/{{vendor}}/logo.png" alt="Logo">
+        <a ng-href="{{vendorConfig.companyWebsiteURL}}" target="_blank">
+          <img ng-src="images/{{vendor}}/logo.png" alt="Logo">
         </a>
       </div>
       <form novalidate class="login_form block-center" name="loginForm" ng-submit="login(email, pass)">
