--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -146,13 +146,8 @@
 
 <script src="config.js"></script>
 <!-- Google Analytics -->
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create',  window.gaAccount, 'auto');
-</script>
+<script google-analytics-include></script>
+
 <!-- End Google Analytics -->
 <!-- build:js scripts/compiled.js -->
 <script type="text/javascript" src="js/portal/config/config.module.js"></script>
@@ -168,6 +163,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/shared/crud/pagination.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter/filter.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/zendesk-include.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/directives/google-analytics-include.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/util/util.factory.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/ui-sref-active-if.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/menu-toggle.directive.js"></script>
