--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -109,90 +109,92 @@
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
           </div>
           <crud-pagination></crud-pagination>
-          <table class="table table-condensed">
-            <thead>
-              <tr>
-                <th>
-                  <a href="" ng-click="order('app_name')">Name</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'app_name'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th class="thin">
-                  <a href="" ng-click="order('app_platform')">Platform</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'app_platform'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th class="thin">
-                  <a href="" ng-click="order('last_app_published_version')">Version</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'last_app_published_version'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th>
-                  <a href="" ng-click="order('updated_at')">Last Update</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-                <th>SDK Key</th>
-                <th class="thin">Status</th>
-                <th>Actions</th>
-                <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                  <a href="" ng-click="order('companyName')">Account</a>
-                  <span class="sortorder" ng-show="filter.predicate === 'companyName'" ng-class="{reverse: filter.reverse}"></span>
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)" ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
-                <td>
-                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit App">
-                  {{item.app_name}}
-                </a>
-                </td>
-                <td>{{item.app_platform}}</td>
-                <td>{{item.last_app_published_version}}</td>
-                <td>{{ getRelativeDate(item.updated_at) }}</td>
-                <td>
-                  <button class="btn btn-primary btn-sdk-key" clipboard text="item.sdk_key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;" uib-tooltip="Click to copy the key to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
-                  <button class="btn btn-primary btn-sdk-key" ng-click="switchKeyVisibility(item)" ng-hide="item.showKey" style="vertical-align: initial;">Show SDK Key</button>
-                  <input ng-if="item.showKey" ng-blur="switchKeyVisibility(item)" class="form-control" value="{{item.sdk_key}}" style="width: 300px; display: inline-block; position: absolute; z-index: 999; margin-left: 4px;" focus-me="item.showKey">
-                  <!--<input class="list-input" disabled ng-hide="item.show" type="password" value="{{item.sdk_key}}" />-->
-                  <!--<input class=""  ng-show="item.show" type="text" value="{{item.sdk_key}}"  />-->
-                  <!--<i class="glyphicon eye"-->
-                  <!--ng-class="{'glyphicon-eye-close': !item.show, 'glyphicon-eye-open': item.show}"-->
-                  <!--ng-click="switch(item)"-->
-                  <!--&gt;</i>-->
-                </td>
-                <td>
-                  <div app-staging-status ng-id="item.id"></div>
-                </td>
-                <td class="actions">
-                  <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                  <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit App">
-                    <i class="glyphicon glyphicon-pencil"></i>
+          <div class="table-responsive">
+            <table class="table table-condensed">
+              <thead>
+                <tr>
+                  <th>
+                    <a href="" ng-click="order('app_name')">Name</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'app_name'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th class="thin">
+                    <a href="" ng-click="order('app_platform')">Platform</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'app_platform'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th class="thin">
+                    <a href="" ng-click="order('last_app_published_version')">Version</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'last_app_published_version'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th>
+                    <a href="" ng-click="order('updated_at')">Last Update</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th>SDK Key</th>
+                  <th class="thin">Status</th>
+                  <th>Actions</th>
+                  <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
+                    <a href="" ng-click="order('companyName')">Account</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'companyName'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)" ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
+                  <td>
+                    <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit App">
+                    {{item.app_name}}
                   </a>
-                  <a ui-sref=".configure({id: item.id})" ng-if="!item.loading" uib-tooltip="Advanced Edit App">
-                    <i class="glyphicon glyphicon-cog"></i>
-                  </a>
-                  <a href="" ng-if="!item.loading" ng-class="{'disabled': isReadOnly() }"ng-click="deleteApp(item)" uib-tooltip="Delete App">
-                    <i class="glyphicon glyphicon-trash"></i>
-                  </a>
-                  <a href="#/mobile/traffic" ng-if="!item.loading" ng-click="storeToStorage(item)" uib-tooltip="Stats">
-                    <i class="glyphicon glyphicon-stats"></i>
-                  </a>
-                  <a href="" ui-sref=".versions({id: item.id})" ng-if="!item.loading" uib-tooltip="Previous Versions">
-                    <i class="glyphicon glyphicon-book"></i>
-                  </a>
-                </td>
-                <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                  <div>{{item.companyName}}</div>
-                </td>
-              </tr>
-              <!--<tr class="disabled loading">-->
-              <!--<td>John</td>-->
-              <!--<td>Doe</td>-->
-              <!--<td>Monday, Aug 10, 2015, 8:31 PM</td>-->
-              <!--<td class="actions">-->
-              <!--<i class="glyphicon glyphicon-refresh spin"></i>-->
-              <!--</td>-->
-              <!--</tr>-->
-            </tbody>
-          </table>
+                  </td>
+                  <td>{{item.app_platform}}</td>
+                  <td>{{item.last_app_published_version}}</td>
+                  <td>{{ getRelativeDate(item.updated_at) }}</td>
+                  <td>
+                    <button class="btn btn-primary btn-sdk-key" clipboard text="item.sdk_key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;" uib-tooltip="Click to copy the key to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
+                    <button class="btn btn-primary btn-sdk-key" ng-click="switchKeyVisibility(item)" ng-hide="item.showKey" style="vertical-align: initial;">Show SDK Key</button>
+                    <input ng-if="item.showKey" ng-blur="switchKeyVisibility(item)" class="form-control" value="{{item.sdk_key}}" style="width: 300px; display: inline-block; position: absolute; z-index: 999; margin-left: 4px;" focus-me="item.showKey">
+                    <!--<input class="list-input" disabled ng-hide="item.show" type="password" value="{{item.sdk_key}}" />-->
+                    <!--<input class=""  ng-show="item.show" type="text" value="{{item.sdk_key}}"  />-->
+                    <!--<i class="glyphicon eye"-->
+                    <!--ng-class="{'glyphicon-eye-close': !item.show, 'glyphicon-eye-open': item.show}"-->
+                    <!--ng-click="switch(item)"-->
+                    <!--&gt;</i>-->
+                  </td>
+                  <td>
+                    <div app-staging-status ng-id="item.id"></div>
+                  </td>
+                  <td class="actions">
+                    <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
+                    <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit App">
+                      <i class="glyphicon glyphicon-pencil"></i>
+                    </a>
+                    <a ui-sref=".configure({id: item.id})" ng-if="!item.loading" uib-tooltip="Advanced Edit App">
+                      <i class="glyphicon glyphicon-cog"></i>
+                    </a>
+                    <a href="" ng-if="!item.loading" ng-class="{'disabled': isReadOnly() }"ng-click="deleteApp(item)" uib-tooltip="Delete App">
+                      <i class="glyphicon glyphicon-trash"></i>
+                    </a>
+                    <a href="#/mobile/traffic" ng-if="!item.loading" ng-click="storeToStorage(item)" uib-tooltip="Stats">
+                      <i class="glyphicon glyphicon-stats"></i>
+                    </a>
+                    <a href="" ui-sref=".versions({id: item.id})" ng-if="!item.loading" uib-tooltip="Previous Versions">
+                      <i class="glyphicon glyphicon-book"></i>
+                    </a>
+                  </td>
+                  <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
+                    <div>{{item.companyName}}</div>
+                  </td>
+                </tr>
+                <!--<tr class="disabled loading">-->
+                <!--<td>John</td>-->
+                <!--<td>Doe</td>-->
+                <!--<td>Monday, Aug 10, 2015, 8:31 PM</td>-->
+                <!--<td class="actions">-->
+                <!--<i class="glyphicon glyphicon-refresh spin"></i>-->
+                <!--</td>-->
+                <!--</tr>-->
+              </tbody>
+            </table>
+          </div>
           <hr>
           <crud-pagination></crud-pagination>
         </div>
