Fixing copyright message on the login page

--- a/code/dev/parts/auth/login.html
+++ b/code/dev/parts/auth/login.html
@@ -78,6 +78,6 @@
       </form>
       <div class="clearfix"></div>
     </div>
-    <span class="footerNoteA">®2015-2017 {{vendorConfig.companyNameFull}}</span>
+    <span class="footerNoteA">{{vendorConfig.copyright}}</span>
   </div>
 </section>
