Fix Goodbay Page

--- a/code/dev/parts/profile/goodbye.html
+++ b/code/dev/parts/profile/goodbye.html
@@ -1,8 +1,8 @@
-<div class="goodbye">
+<div class="goodbye col-sm-12">
     <div class="container">
         <div class="header-logo center-block">
             <a ng-href="{{::websiteUrl}}" target="_blank">
-                <img class="img-responsive" src="images/{{vendor}}/logo_color.png" alt="Logo">
+                <img class="img-responsive" ng-src="images/{{vendor}}/logo_color.png" alt="Logo">
             </a>
         </div>
 
