--- a/code/dev/parts/auth/page-reset-password.html
+++ b/code/dev/parts/auth/page-reset-password.html
@@ -6,8 +6,8 @@
         <div class="col-sm-12">
           <div class="text-center col-xs-4">
             <div class="header-logo">
-              <a href="{{vendorConfig.companyWebsiteURL}}" target="_blank">
-                <img class="img-responsive" src="images/{{vendor}}/logo_color.png" alt="Logo" />
+              <a ng-href="{{vendorConfig.companyWebsiteURL}}" target="_blank">
+                <img class="img-responsive" ng-src="images/{{vendor}}/logo_color.png" alt="Logo" />
               </a>
             </div>
           </div>
