Fix Help button into Firefox

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -61,7 +61,7 @@
     }
   };
 </script>-->
-<script zendesk-include></script>
+<div zendesk-include></div>
 
 <!-- build:js scripts/vendor.js -->
 
